--- a/site/index.html
+++ b/site/index.html
@@ -64,7 +64,7 @@
 <h3>Distance Using Latitude and Longitude</h3>
 
 <p>Given the latitude and longitude of any two points on earth, we can calculate the air distance between them.  Let’s calculate the distance from the Space Needle in Seattle to the Eiffel Tower in Paris.</p>
-<p>We will assume that the earth is a perfect sphere, which is not quite correct. This method below can thus be imprecise by up to 100 meters.</p>
+<p>We will assume that the earth is a perfect sphere, which is not quite correct. The method below can thus be imprecise by up to 100 meters.</p>
 <p><span class="hurmet-calc" data-entry="r = '3960 miles'"></span>. radius of the earth.</p>
 <p>Seattle’s Space Needle:</p>
 <p><span class="hurmet-calc" data-entry="lat_1 = '47.620529°'"></span></p>
