Correct link to minified JS file.

--- a/site/ce/BeamAnalysis.html
+++ b/site/ce/BeamAnalysis.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Beam Analysis</title>
 <link rel="stylesheet" href="beam.css">
-<script src="beamAnalysis.js"></script>
+<script src="beamAnalysis.min.js"></script>
 </head>
 
 <body>
