Add deflection written result to beam analysis.

--- a/site/index.html
+++ b/site/index.html
@@ -84,6 +84,9 @@ Patterned live loads: yes
 <p><span class="hurmet-calc" data-entry="V_max = '3.03 kips'"></span></p>
 <p><span class="hurmet-calc" data-entry="M_max = '2.59 k·ft'"></span></p>
 <p><span class="hurmet-calc" data-entry="M_min = '-7.05 k·ft'"></span></p>
+<p><span class="hurmet-calc" data-entry="Δ = 0.0189 in"></span></p>
+<p>The results are valid Hurmet variable definitions. You’ll need to hit the refresh button, <img src="https://hurmet.app//images/recalc.svg" alt="Refresh" width="" class="inline">, in order to see the written results displayed properly.  Then those variables can be used in subsequent calculations. As in:</p>
+<p><span class="hurmet-calc" data-entry="R_total = R_1 + R_2 = ?? kips"><code>R_total = R_1 + R_2 = 4.67 kips</code></span></p>
 <p>For civil and structural engineers, this is pretty cool. </p>
 
 <p></p>
