Change landing page example to Blood Types.

--- a/site/index.html
+++ b/site/index.html
@@ -61,33 +61,41 @@
 
 <p>This week’s example:</p>
 
-<h3>Beam Analysis</h3>
-<p>Hurmet introduces a new feature, beam analysis. It can be found at https://hurmet.app/ce/BeamAnalysis.html.</p>
-<p>On that page, you can specify a beam and do an analysis. Then you can copy the results with a <strong>Ctrl-C</strong> and paste them into a Hurmet page, like this one. Here’s an example:</p>
-<p><strong>Input</strong><img src="data:image/svg+xml;utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='450' height='469.6378878498688'%3E%3Cdefs%3E%3Cstyle type='text/css'%3E  svg %7B background-color: %23fff; %7D  text, tspan %7B font: 12px Arial; %7D  circle %7B stroke:%23000; fill:%23fff; %7D  polygon %7B stroke:%23000; fill: %23000; fill-opacity:1.0 %7D  line %7B stroke:%23000; %7D  path %7B stroke:%23000; fill:%23fff; fill-opacity: 0.0 %7D%3C/style%3E%3C/defs%3E%3Ctext x='20' y='82'%3Eloads%3C/text%3E%3Ctext x='20' y='96'%3E(kips, ft)%3C/text%3E%3Cpath d='M90 80 h300' stroke-width='1.5px'/%3E%3Cpath d='M90 73 v14 m0 -14 l-7 7 M90 80 l-7 7 M90 87 l-7 7'/%3E%3Cpath d='M330 80.75 l5 10 h-10 z' style='fill-opacity:1.0'/%3E%3Ctext x='210' y='95' text-anchor='middle'%3E12.5′%3C/text%3E%3Ctext x='360' y='95' text-anchor='middle'%3E3.125′%3C/text%3E%3Cpath d='M147.6 79.25 l-4 -8 h3.5 v-32 h1 v32 h3z' style='fill: %23000; fill-opacity:1.0'/%3E%3Ctext x='147.6' y='35' text-anchor='middle'%3E-2%3C/text%3E%3Cpath d='M90 80V66.9L147.6 64.84871794871795L330 58.35299145299145L370.8 56.9V76.9L390 76.9V80'/%3E%3Ctext x='90' y='61.900000000000006'%3E0.131%3C/text%3E%3Ctext x='340.8' y='51.9'%3E0.231%3C/text%3E%3Ctext x='20' y='224'%3Eshear%3C/text%3E%3Ctext x='20' y='238'%3E(kips)%3C/text%3E%3Cpath d='M90 222 h300' stroke-width='1.5px'/%3E%3Ctext x='20' y='326'%3Ebending%3C/text%3E%3Ctext x='20' y='340'%3E(kip-ft)%3C/text%3E%3Cpath d='M90 324 h300' stroke-width='1.5px'/%3E%3Cpath d='M90 87.75 l4 8 h-3.5 v25 h-1 v-25 h-3z' style='fill: %23000; fill-opacity:1.0'/%3E%3Ctext x='90' y='135' text-anchor='middle'%3E3.03%3C/text%3E%3Cpath d='M81.25 64.84A17.5 17.5 0 0 0 80.32 94.58'/%3E%3Cpolygon points='86.96 97.23 81.06 91.83 78.97 97.58 '/%3E%3Ctext x='75' y='65' text-anchor='end'%3E7.05%3C/text%3E%3Cpath d='M330 90.75 l4 8 h-3.5 v22 h-1 v-22 h-3z' style='fill: %23000; fill-opacity:1.0'/%3E%3Ctext x='330' y='135' text-anchor='middle'%3E1.64%3C/text%3E%3Ctext x='20' y='435'%3Edeflection%3C/text%3E%3Cpath d='M90 433 h300' stroke-width='1.5px'/%3E%3Cpath d='M96.00 433.16 L102.00 433.62 L108.00 434.34 L114.00 435.25 L120.00 436.34 L126.00 437.54 L132.00 438.82 L138.00 440.13 L144.00 441.45 L147.60 442.21 L147.60 442.21 L153.60 443.44 L159.60 444.59 L165.60 445.65 L171.60 446.61 L177.60 447.48 L183.60 448.24 L189.60 448.89 L195.60 449.42 L201.60 449.84 L207.60 450.13 L213.60 450.30 L219.60 450.34 L225.60 450.26 L231.60 450.05 L237.60 449.72 L243.60 449.27 L249.60 448.70 L255.60 448.01 L261.60 447.22 L267.60 446.32 L273.60 445.32 L279.60 444.24 L285.60 443.07 L291.60 441.83 L297.60 440.53 L303.60 439.19 L309.60 437.80 L315.60 436.39 L321.60 434.97 L327.60 433.56 L330.00 433.00 L330.00 433.00 L336.00 431.62 L342.00 430.26 L348.00 428.91 L354.00 427.58 L360.00 426.25 L366.00 424.93 L370.80 423.87 L370.80 423.87 L376.80 422.55 L382.80 421.22 L388.80 419.90 L390.00 419.64 LNaN NaN'/%3E%3Cpath d='M90.00 222.00 L90.00 178.37 L96.00 178.96 L102.00 179.56 L108.00 180.18 L114.00 180.80 L120.00 181.43 L126.00 182.07 L132.00 182.72 L138.00 183.38 L144.00 184.05 L147.60 184.46 L147.60 213.23 L153.60 213.91 L159.60 214.61 L165.60 215.31 L171.60 216.03 L177.60 216.75 L183.60 217.48 L189.60 218.23 L195.60 218.98 L201.60 219.74 L207.60 220.52 L213.60 221.30 L219.60 222.09 L225.60 222.89 L231.60 223.70 L237.60 224.52 L243.60 225.35 L249.60 226.19 L255.60 227.04 L261.60 227.90 L267.60 228.77 L273.60 229.64 L279.60 230.53 L285.60 231.43 L291.60 232.34 L297.60 233.25 L303.60 234.18 L309.60 235.11 L315.60 236.06 L321.60 237.01 L327.60 237.98 L330.00 238.37 L330.00 214.72 L336.00 215.69 L342.00 216.68 L348.00 217.68 L354.00 218.68 L360.00 219.70 L366.00 220.73 L370.80 221.55 L370.80 221.55 L376.80 221.69 L382.80 221.83 L388.80 221.97 L390 222'/%3E%3Cpath d='M90.00 324.00 L90.00 367.89 L96.00 362.03 L102.00 356.25 L108.00 350.56 L114.00 344.95 L120.00 339.42 L126.00 333.98 L132.00 328.62 L138.00 323.36 L144.00 318.18 L147.60 315.12 L147.60 315.12 L153.60 313.98 L159.60 312.94 L165.60 311.98 L171.60 311.13 L177.60 310.37 L183.60 309.71 L189.60 309.15 L195.60 308.69 L201.60 308.33 L207.60 308.08 L213.60 307.93 L219.60 307.89 L225.60 307.96 L231.60 308.13 L237.60 308.42 L243.60 308.82 L249.60 309.32 L255.60 309.95 L261.60 310.69 L267.60 311.54 L273.60 312.52 L279.60 313.61 L285.60 314.83 L291.60 316.16 L297.60 317.62 L303.60 319.20 L309.60 320.91 L315.60 322.75 L321.60 324.71 L327.60 326.81 L330.00 327.68 L330.00 327.68 L336.00 326.76 L342.00 325.98 L348.00 325.33 L354.00 324.81 L360.00 324.43 L366.00 324.19 L370.80 324.10 L370.80 324.10 L376.80 324.05 L382.80 324.01 L388.80 324.00 L390.00 324.00 L390 324'/%3E%3Cpath d='M90.00 324.00 L90.00 327.30 L96.00 326.87 L102.00 326.46 L108.00 326.07 L114.00 325.70 L120.00 325.35 L126.00 325.02 L132.00 324.71 L138.00 324.41 L144.00 324.14 L147.60 323.98 L147.60 323.98 L153.60 323.74 L159.60 323.51 L165.60 323.30 L171.60 323.11 L177.60 322.94 L183.60 322.79 L189.60 322.66 L195.60 322.55 L201.60 322.45 L207.60 322.38 L213.60 322.32 L219.60 322.28 L225.60 322.26 L231.60 322.26 L237.60 322.28 L243.60 322.32 L249.60 322.37 L255.60 322.45 L261.60 322.54 L267.60 322.65 L273.60 322.79 L279.60 322.94 L285.60 323.11 L291.60 323.29 L297.60 323.50 L303.60 323.73 L309.60 323.97 L315.60 324.23 L321.60 324.52 L327.60 324.82 L330.00 324.94 L330.00 324.94 L336.00 324.76 L342.00 324.60 L348.00 324.46 L354.00 324.34 L360.00 324.24 L366.00 324.15 L370.80 324.10 L370.80 324.10 L376.80 324.05 L382.80 324.01 L388.80 324.00 L390.00 324.00 L390 324'/%3E%3Ctext x='90.00' y='176.37'%3E%3Ctspan style='text-anchor: middle'%3E3.03%3C/tspan%3E%3C/text%3E%3Ctext x='147.60' y='182.46'%3E%3Ctspan style='text-anchor: middle'%3E2.61%3C/tspan%3E%3C/text%3E%3Ctext x='330.00' y='251.37'%3E%3Ctspan style='text-anchor: middle'%3E-1.14%3C/tspan%3E%3C/text%3E%3Ctext x='330.00' y='212.72'%3E%3Ctspan style='text-anchor: middle'%3E0.506%3C/tspan%3E%3C/text%3E%3Ctext x='90.00' y='176.37'%3E%3Ctspan style='text-anchor: middle'%3E3.03%3C/tspan%3E%3C/text%3E%3Ctext x='147.60' y='182.46'%3E%3Ctspan style='text-anchor: middle'%3E2.61%3C/tspan%3E%3C/text%3E%3Ctext x='330.00' y='251.37'%3E%3Ctspan style='text-anchor: middle'%3E-1.14%3C/tspan%3E%3C/text%3E%3Ctext x='330.00' y='212.72'%3E%3Ctspan style='text-anchor: middle'%3E0.506%3C/tspan%3E%3C/text%3E%3Ctext x='90.00' y='380.89'%3E%3Ctspan style='text-anchor: middle'%3E-7.05%3C/tspan%3E%3C/text%3E%3Ctext x='147.60' y='313.12'%3E%3Ctspan style='text-anchor: middle'%3E1.43%3C/tspan%3E%3C/text%3E%3Ctext x='218.93' y='305.89'%3E%3Ctspan style='text-anchor: middle'%3E2.59%3C/tspan%3E%3C/text%3E%3Ctext x='90.00' y='380.89'%3E%3Ctspan style='text-anchor: middle'%3E-7.05%3C/tspan%3E%3C/text%3E%3Ctext x='147.60' y='313.12'%3E%3Ctspan style='text-anchor: middle'%3E1.43%3C/tspan%3E%3C/text%3E%3Ctext x='218.93' y='305.89'%3E%3Ctspan style='text-anchor: middle'%3E2.59%3C/tspan%3E%3C/text%3E%3Ctext x='390' y='417.6378878498688'%3E%3Ctspan style='text-anchor: middle'%3E0.015″%3C/tspan%3E%3C/text%3E%3Ctext x='219.60000000000002' y='463.3401690401005'%3E%3Ctspan style='text-anchor: middle'%3E-0.019″%3C/tspan%3E%3C/text%3E%3C/svg%3E" alt="Beam Diagram" class="right"></p>
-<pre><code>E: 29,000 MPa
-Section: W8X31
-I: 110 in⁴
-Beam: f 12.5′ p 3.125′ —
+<h3>Blood Types</h3>
 
-wD = -0.031 kips/ft
-wL = -0.1 -0.2 kips/ft; 0′ -1′
-PL = -2 kips at 3′
+<p>A patient needs a blood transfusion. Does the blood bank have a compatible blood type?</p>
 
-Load combinations: service
-Patterned live loads: yes
-</code></pre>
-<p><strong>Results</strong></p>
-<p><span class="hurmet-calc" data-entry="R_1 = '3.03 kips'"></span></p>
-<p><span class="hurmet-calc" data-entry="M_1 = '-7.05 k·ft'"></span></p>
-<p><span class="hurmet-calc" data-entry="R_2 = '1.64 kips'"></span></p>
-<p><span class="hurmet-calc" data-entry="V_max = '3.03 kips'"></span></p>
-<p><span class="hurmet-calc" data-entry="M_max = '2.59 k·ft'"></span></p>
-<p><span class="hurmet-calc" data-entry="M_min = '-7.05 k·ft'"></span></p>
-<p><span class="hurmet-calc" data-entry="Δ = 0.0189 in"></span></p>
-<p>The results are valid Hurmet variable definitions. You’ll need to hit the refresh button, <img src="https://hurmet.app//images/recalc.svg" alt="Refresh" width="" class="inline">, in order to see the written results displayed properly.  Then those variables can be used in subsequent calculations. As in:</p>
-<p><span class="hurmet-calc" data-entry="R_total = R_1 + R_2 = ?? kips"><code>R_total = R_1 + R_2 = 4.67 kips</code></span></p>
-<p>For civil and structural engineers, this is pretty cool. </p>
+<p>With ABO blood categorization, the compatible recipients for each blood type can be defined this way:</p>
+
+<p><span class="hurmet-calc" data-entry="recipients = {
+   &quot;A+&quot;: [&quot;A+&quot;, &quot;AB+&quot;];
+   &quot;A-&quot;: [&quot;A+&quot;, &quot;A-&quot;, &quot;AB+&quot;, &quot;AB-&quot;];
+   &quot;B+&quot;: [&quot;B+&quot;, &quot;AB+&quot;];
+   &quot;B-&quot;: [&quot;B+&quot;, &quot;B-&quot;, &quot;AB+&quot;, &quot;AB-&quot;];
+   &quot;O+&quot;: [&quot;A+&quot;, &quot;B+&quot;, &quot;O+&quot;, &quot;AB+&quot;];
+   &quot;O-&quot;: [&quot;A+&quot;, &quot;B+&quot;, &quot;O+&quot;, &quot;AB+&quot;, &quot;A-&quot;, &quot;B-&quot;, &quot;O-&quot;, &quot;AB-&quot;];
+   &quot;AB+&quot;: [&quot;AB+&quot;];
+   &quot;AB-&quot;: [&quot;AB+&quot;, &quot;AB-&quot;]
+   }"></span></p>
+<p>Then we can write a function to test if there is a compatibility match between a patient’s <span class="hurmet-calc" data-entry="bloodType"></span> and the blood bank’s <span class="hurmet-calc" data-entry="availableTypes"></span>.</p>
+
+<p><span class="hurmet-calc" data-entry="function survive(bloodType, availableTypes, recipients)
+    for type in availableTypes
+        if bloodType ∈ recipients[type]
+          return true
+    return false"></span></p>
+
+<p>Now let’s try a couple scenarios:</p>
+
+<p>Say that the patient has blood type A+ and the blood bank has types <span class="hurmet-calc" data-entry="[&quot;A-&quot;, &quot;B+&quot;, &quot;AB+&quot;, &quot;O+&quot;, &quot;B+&quot;, &quot;B-&quot;]"></span>.  We check with the function:</p>
+
+<p class="indented"><span class="hurmet-calc" data-entry="survive(&quot;A+&quot;, [&quot;A-&quot;, &quot;B+&quot;, &quot;AB+&quot;, &quot;O+&quot;, &quot;B+&quot;, &quot;B-&quot;], recipients) = %"></span></p>
+
+<p>That’s a good result. Now let’s try another scenario:</p>
+
+<p class="indented"><span class="hurmet-calc" data-entry="survive(&quot;AB-&quot;, [&quot;O+&quot;, &quot;AB+&quot;], recipients) = %"></span></p>
+
+<p>Not good. Be generous. Give blood.</p>
 
 <p></p>
 </div> <!-- editor -->
