Format landing page with a table.

--- a/site/index.html
+++ b/site/index.html
@@ -68,10 +68,30 @@
    126^2, 138^2, 237^2,  44^2;
    260^2,   3^2,  54^2, 150^2) = ?"></span></p>
 <p>Let’s verify that this is a magic square.</p>
-<p><span class="hurmet-calc" data-entry="sum(𝐌[1,]) = ?"></span>        <span class="hurmet-calc" data-entry="sum(𝐌[,1]) = ?"></span></p>
-<p><span class="hurmet-calc" data-entry="sum(𝐌[2, ]) = ?"></span>        <span class="hurmet-calc" data-entry="sum(𝐌[,2]) = ?"></span></p>
-<p><span class="hurmet-calc" data-entry="sum(𝐌[3, ]) = ?"></span>        <span class="hurmet-calc" data-entry="sum(𝐌[,3]) = ?"></span></p>
-<p><span class="hurmet-calc" data-entry="sum(𝐌[4, ]) = ?"></span>        <span class="hurmet-calc" data-entry="sum(𝐌[,4]) = ?"></span></p>
+<table class="nogrid">
+   <tbody>
+      <tr>
+         <td><p><span class="hurmet-calc" data-entry="sum(𝐌[1,]) = ?"></span></p></td>
+         <td data-colwidth="253"><p><span class="hurmet-calc" data-entry="sum(𝐌[,1]) = ?"></span></p></td>
+         <td></td>
+      </tr>
+      <tr>
+         <td><p><span class="hurmet-calc" data-entry="sum(𝐌[2, ]) = ?"></span></p></td>
+         <td data-colwidth="253"><p><span class="hurmet-calc" data-entry="sum(𝐌[,2]) = ?"></span></p></td>
+         <td></td>
+      </tr>
+      <tr>
+         <td><p><span class="hurmet-calc" data-entry="sum(𝐌[3, ]) = ?"></span></p></td>
+         <td data-colwidth="253"><p><span class="hurmet-calc" data-entry="sum(𝐌[,3]) = ?"></span></p></td>
+         <td></td>
+      </tr>
+      <tr>
+         <td><p><span class="hurmet-calc" data-entry="sum(𝐌[4, ]) = ?"></span></p></td>
+         <td data-colwidth="253"><p><span class="hurmet-calc" data-entry="sum(𝐌[,4]) = ?"></span></p></td>
+         <td></td>
+      </tr>
+   </tbody>
+</table>
 <p><span class="hurmet-calc" data-entry="𝐌[1, 1] + 𝐌[2, 2] + 𝐌[3, 3] + 𝐌[4, 4] = ?"></span></p>
 <p><span class="hurmet-calc" data-entry="𝐌[4, 1] + 𝐌[3, 2] + 𝐌[2, 3] + 𝐌[1, 4] = ?"></span></p>
 <p>Yep. <span class="hurmet-calc" data-entry="✓"></span></p>
