Change landing page example to simple span beam.

--- a/site/index.html
+++ b/site/index.html
@@ -61,49 +61,17 @@
 
 <p>This week’s example:</p>
 
-<h3>Magic Square of Squares</h3>
-<p>A “magic square” is a matrix whose rows and columns and diagonals each sum to the same number. Allen William Johnson has discovered a magic square whose elements are all squares.</p>
-<p><span class="hurmet-calc" data-entry="𝐌 = (30^2, 246^2, 172^2,  45^2;
-   93^2, 116^2,  66^2, 258^2;
-   126^2, 138^2, 237^2,  44^2;
-   260^2,   3^2,  54^2, 150^2) = ?"></span></p>
-<p>Let’s verify that this is a magic square.</p>
-<table class="nogrid">
-   <tbody>
-      <tr>
-         <td><p><span class="hurmet-calc" data-entry="sum(𝐌[1,]) = ?"></span></p></td>
-         <td data-colwidth="253"><p><span class="hurmet-calc" data-entry="sum(𝐌[,1]) = ?"></span></p></td>
-         <td></td>
-      </tr>
-      <tr>
-         <td><p><span class="hurmet-calc" data-entry="sum(𝐌[2, ]) = ?"></span></p></td>
-         <td data-colwidth="253"><p><span class="hurmet-calc" data-entry="sum(𝐌[,2]) = ?"></span></p></td>
-         <td></td>
-      </tr>
-      <tr>
-         <td><p><span class="hurmet-calc" data-entry="sum(𝐌[3, ]) = ?"></span></p></td>
-         <td data-colwidth="253"><p><span class="hurmet-calc" data-entry="sum(𝐌[,3]) = ?"></span></p></td>
-         <td></td>
-      </tr>
-      <tr>
-         <td><p><span class="hurmet-calc" data-entry="sum(𝐌[4, ]) = ?"></span></p></td>
-         <td data-colwidth="253"><p><span class="hurmet-calc" data-entry="sum(𝐌[,4]) = ?"></span></p></td>
-         <td></td>
-      </tr>
-   </tbody>
-</table>
-<p><span class="hurmet-calc" data-entry="𝐌[1, 1] + 𝐌[2, 2] + 𝐌[3, 3] + 𝐌[4, 4] = ?"></span></p>
-<p><span class="hurmet-calc" data-entry="𝐌[4, 1] + 𝐌[3, 2] + 𝐌[2, 3] + 𝐌[1, 4] = ?"></span></p>
-<p>Yep. <span class="hurmet-calc" data-entry="✓"></span></p>
-<p>References</p>
-<ol>
-   <li>
-      <p>Allen William Johnson. Journal of Recreational Mathematics. 22 (1990), 38</p>
-   </li>
-   <li>
-      <p>https://www.johndcook.com/blog/2021/04/20/magic-square-of-squares/</p>
-   </li>
-</ol>
+<h3>Simple span beam</h3>
+
+<p><span class="hurmet-calc" data-entry="L = '12 feet'"></span>, length</p>
+
+<p><span class="hurmet-calc" data-entry="w = '110 lbf/ft'"></span>, uniform line load</p>
+
+<p><span class="hurmet-calc" data-entry="P = '1000 lbf'"></span>, mid-span point load</p>
+
+<p><span class="hurmet-calc" data-entry="V = (w L)/2 + P/2 = ?? lbf"></span>, maximum shear</p>
+
+<p><span class="hurmet-calc" data-entry="M = (w L^2)/8 + (P L)/4 = ?? lbf-ft"></span>, max bending moment</p>
 
 <p></p>
 </div> <!-- editor -->
